[package]
name = "rstool"
version = "0.1.2"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
description = "a cli tools written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli usage
clap = { version = "4.0.26", features = ["derive"] }

# Commands::Doc
webbrowser = "0.8.10"

# Commands::Extract
flate2 = "1.0.26"
sevenz-rust = "0.4.3"
tar = "0.4.39"
# unrar = "0.5.1"
zip-extract = "0.1.2"

# Commands::Hash
md-5 = "0.10.5"
ripemd = "0.1.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"

# Commands::Image
image = "0.24.6"

# Commands::Serve
ipconfig = "0.3.1"
rocket = "0.5.0-rc.2"

# ...
font-kit = { version = "0.11.0" }
