[package]
name = "rstool"
version = "0.1.3"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
description = "a cli tools written in rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
# node-addon support
napi = { version = "2.13.2", default-features = false, features = ["napi4"] }
napi-derive = "2.13.0"

# cli support
clap = { version = "4.0.26", features = ["derive"] }

# Commands::Doc
webbrowser = "0.8.10"

# Commands::Extract
flate2 = "1.0.26"
sevenz-rust = "0.4.3"
tar = "0.4.39"
# unrar = "0.5.1"
zip-extract = "0.1.2"

# Commands::Hash
md-5 = "0.10.5"
ripemd = "0.1.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"

# Commands::Image
image = "0.24.6"

# Commands::Serve
ipconfig = "0.3.1"
rocket = "0.5.0-rc.2"

# ...
font-kit = { version = "0.11.0" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
#lto = true  #  Link-Time Optimization